Task12: Add JWT auth

--- a/server/browser/index.html
+++ b/server/browser/index.html
@@ -1,9 +1,12 @@
-<html>
-    <head>
-        <title>Alabala</title>
-    </head>
 
-    <body>
-        <i>Hahahahha</i>
-    </body>
-</html> 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>CCA</title>
+    <link href="main.css" rel="stylesheet">
+  </head>
+  <body>
+    <script src="main.js"></script>
+  </body>
+</html>
